@@ -46,5 +46,7 @@
 </table>
 
 <if:userflags_notlocked>
-<input id="new_button" type="button" class="button" value="<gettext>New Flag</gettext>" />
+<div>
+ <input id="new_button" type="button" class="button" value="<gettext>New Flag</gettext>" />
+</div>
 </if:userflags_notlocked>
